dev - impl user crud, jwt and auth middleware
